--- a/templates/login.html
+++ b/templates/login.html
@@ -32,21 +32,29 @@
             <a href="#about">About</a>
         </div>
     </div>
-<div class="login-container">
-        <h1>Login</h1>
-        <form id="login-form" onsubmit="login(event)" style="
+    <div>
+        <div class="login-container" style="
+display: flex;
+flex-direction: column;
+align-content: space-between;
+justify-content: space-between;
+align-items: stretch;">
+
+            <h1>Login</h1>
+            <form id="login-form" onsubmit="login(event)" style="
         display: flex;
         flex-direction: column;
         align-items: center;
     ">
-            <input id="username-input" type="text" placeholder="Username" required>
-            <input id="password-input" type="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-        </form>
-        <p>Don't have an account? <a href="{{url_for('sign_up')}}">Sign up</a></p>
-        <div id="error-container"></div>
+                <input id="username-input" type="text" placeholder="Username" required>
+                <input id="password-input" type="password" placeholder="Password" required>
+                <button type="submit">Login</button>
+            </form>
+            <p>Don't have an account? <a href="{{url_for('sign_up')}}">Sign up</a></p>
+            <div id="error-container"></div>
+        </div>
     </div>
-    
+
 
     <script type="module" src="/static/login.js"></script>
 </body>
