--- a/templates/login.html
+++ b/templates/login.html
@@ -32,8 +32,15 @@
             <a href="#about">About</a>
         </div>
     </div>
-    <div>
-        <div class="login-container" style="
+
+    <div class="page-container">
+        <div id="loader" class="loader"></div>
+    </div>
+    
+    <div class= "hide-on-loader">
+        
+
+        <div class="login-container hide-on-loader" style="
 display: flex;
 flex-direction: column;
 align-content: space-between;
